# smashgg-exporter

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_12_03_1758-53545f86378f_add_tournament_and_event_tables.py  2025_12_03_2151-1184ed4b69c2_remove_eventdb_slug_and_state_mapping.py  2025_12_04_1211-743a82a99bd9_add_sets_and_player_tables.py  2025_12_14_1626-2b09db28988c_tournament_city_optional.py  2025_12_25_0045-1d670ab30ba2_datetime_tz_aware.py  2025_12_25_1222-53eb75b221e1_add_delete_on_cascade.py  2025_12_25_1445-fe9731c112f0_default_created_updated_at.py  2025_12_26_1129-873878f1e31f_add_team_table.py  2025_12_28_2336-cf7cb93a17d5_add_team_player_ondelete_cascade.py  61876f1577c7_add_tournament_event_tables.py
queries/: tournaments.query.py
src/: export_db_to_csv.py  getDateTimestamp.py  main.py
src/customTypes/: startgg.py
src/models/: __init__.py
src/queries/: getTournaments.py  tournamentsQuery.py
src/queries/sets/: getSets.py  setsQuery.py
src/queries/tournaments/: getTournaments.py  tournamentsQuery.py
src/utils/: constants.py  getDateTimestamp.py  parse_str_or_none.py  path.py  shouldSkipEvent.py  skipEvent.py
