[project]
name = "smashgg-exporter"
version = "0.1.0"
description = ""
authors = [
    {name = "mli42",email = "mli@student.42.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pysmashgg (>=1.2.0.1,<2.0.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
